tests/ui/cp-skip-ack.stderr
error[E0624]: associated function `new` is private
  --> tests/ui/cp-skip-ack.rs:15:23
   |
15 |         unsafe { Txn::new(LaneId::new(1), hibana::control::Gen::ZERO) };
   |                       ^^^ private associated function
   |
  ::: src/control/automaton/txn.rs
   |
   |     pub(crate) unsafe fn new(lane: LaneId, generation: Gen) -> Self {
   |     --------------------------------------------------------------- private associated function defined here

error[E0599]: no method named `commit` found for struct `InBegin<Inv, Shot>` in the current scope
  --> tests/ui/cp-skip-ack.rs:20:28
   |
20 |     let _closed = in_begin.commit(&mut tap);
   |                            ^^^^^^ method not found in `InBegin<TestInv, hibana::control::One>`
